--- a/src/app/pharmacists/components/pharmacists-form/pharmacists-form.component.html
+++ b/src/app/pharmacists/components/pharmacists-form/pharmacists-form.component.html
@@ -83,7 +83,7 @@
         <ng-container matColumnDef="print">
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let prescription">
-            <button mat-button color="info" matTooltip="Próximamente" matTooltipPosition="above"><mat-icon >print</mat-icon></button>
+            <button mat-button color="info" matTooltip="Imprimir" matTooltipPosition="above" printTitle="Imprimir receta" printSectionId="{{prescription._id}}" ngxPrint><mat-icon >print</mat-icon></button>
           </td>
         </ng-container>
         
@@ -127,4 +127,17 @@
       </table>
     </div>
   </mat-card>
+</div>
+
+<div class="">
+  <div *ngFor="let prescription of prescriptions" class="hidden" id="{{prescription._id}}">
+    <h3>Prescripción electrónica RecetAR</h3>
+    <p>
+      <strong>Profesional: </strong>{{prescription.professionalFullname}}
+    </p>
+    <p>
+      <strong>Paciente: </strong>{{patient.lastName}}, {{patient.firstName}} DNI {{patient.dni}}
+    </p>
+    <mat-chip>{{prescription.supplies.length}}</mat-chip> 
+  </div>
 </div>
