--- a/src/app/pharmacists/components/pharmacists-form/pharmacists-form.component.html
+++ b/src/app/pharmacists/components/pharmacists-form/pharmacists-form.component.html
@@ -129,7 +129,7 @@
   </mat-card>
 </div>
 
-<div class="">
+<div class="hidden-print">
   <div *ngFor="let prescription of prescriptions" class="hidden" id="{{prescription._id}}">
     <h3>Prescripción electrónica RecetAR</h3>
     <p>
