--- a/src/app/pharmacists/components/pharmacists-form/pharmacists-form.component.html
+++ b/src/app/pharmacists/components/pharmacists-form/pharmacists-form.component.html
@@ -54,7 +54,7 @@
         <!-- Position Column -->
         <ng-container matColumnDef="user">
           <th mat-header-cell *matHeaderCellDef> Profesional </th>
-          <td mat-cell *matCellDef="let prescription"> {{prescription.professionalFullname}} </td>
+          <td mat-cell *matCellDef="let prescription"> {{prescription.professionalFullname}} {{prescription.patientId.firstName}} </td>
         </ng-container>
       
         <!-- Name Column -->
