--- a/src/app/pharmacists/components/pharmacists-form/pharmacists-form.component.sass
+++ b/src/app/pharmacists/components/pharmacists-form/pharmacists-form.component.sass
@@ -43,3 +43,11 @@
 
 .element-row.expanded
   border-bottom-color: transparent
+
+.cdk-column-expandedDetail
+  border-left-style: solid
+  border-color:#c9c9ca
+  border-width: 1px
+  margin-left: 24px
+  outline: 1px
+  outline-offset: -2px
