adds patient-container class, and reset form after succes prescription save

--- a/src/app/professionals/components/professional-form/professional-form.component.html
+++ b/src/app/professionals/components/professional-form/professional-form.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <mat-card>
-    <form [formGroup]="professionalForm" (ngSubmit)="onSubmitProfessionalForm()">
+    <form [formGroup]="professionalForm" #professionalNgForm="ngForm" (ngSubmit)="onSubmitProfessionalForm(professionalForm, professionalNgForm)">
       <div fxFlex="100" fxLayout="column" fxLayoutAlign="center">
         <h1>
           Registrar nueva receta
@@ -14,7 +14,7 @@
           <mat-datepicker [startAt]="today" #picker1></mat-datepicker>
         </mat-form-field>
 
-        <div formGroupName="patient">
+        <div formGroupName="patient" class="patient-container">
 
 
           <!-- Dni -->
