--- a/src/app/professionals/components/professional-form/professional-form.component.sass
+++ b/src/app/professionals/components/professional-form/professional-form.component.sass
@@ -6,6 +6,7 @@
 .mat-form-field, button
   margin: 10px 0
 
-.nested-supplies
+.patient-container, .nested-supplies
   mat-form-field
     width: 100%
+
