--- a/src/app/professionals/components/professional-form/professional-form.component.sass
+++ b/src/app/professionals/components/professional-form/professional-form.component.sass
@@ -1,6 +1,6 @@
 .container
-  width: 40%
-  max-width: 420px
+  width: 60%
+  max-width: 800px
   margin: 30px auto 0px
 
 .mat-form-field, button
@@ -10,3 +10,5 @@
   mat-form-field
     width: 100%
 
+.sub-container
+  width: 100%
