Add supply quantity

--- a/src/app/pharmacists/components/pharmacists-form/pharmacists-form.component.html
+++ b/src/app/pharmacists/components/pharmacists-form/pharmacists-form.component.html
@@ -99,7 +99,7 @@
             <mat-cell *matCellDef="let detail">
               <div fxLayout="column" fxLayoutAlign="space-around start">
                 <div *ngFor="let supp of detail.element.supplies">
-                  {{ supp.name }}
+                  {{ supp.supply.name }} <mat-chip>{{ supp.quantity }}</mat-chip>
                 </div>
               </div>
             </mat-cell>
