--- a/src/app/professionals/components/professional-form/professional-form.component.sass
+++ b/src/app/professionals/components/professional-form/professional-form.component.sass
@@ -9,6 +9,8 @@
 .patient-container, .nested-supplies
   mat-form-field
     width: 100%
+    button[type="button"]
+      margin: 0
 
 .sub-container
   width: 100%
